Fixed invisible status

--- a/base.css
+++ b/base.css
@@ -67,7 +67,7 @@
 #app-mount .wrapper-3t9DeA rect[fill="#747f8d"], #app-mount .wrapper-3t9DeA rect[mask*=offline], #app-mount .wrapper-3t9DeA rect[fill=NaN] {
   stroke: var(--rs-offline-color);
 }
-#app-mount .wrapper-3t9DeA rect[mask*=invisible], #app-mount .wrapper-3t9DeA rect[fill="rgba(116, 127, 141, 1)"] {
+#app-mount .wrapper-3t9DeA rect[fill="#747f8d"], #app-mount .wrapper-3t9DeA rect[mask*=invisible], #app-mount .wrapper-3t9DeA rect[fill="rgba(116, 127, 141, 1)"] {
   stroke: var(--rs-invisible-color);
 }
 #app-mount .wrapper-3t9DeA rect[x="16"] {
